# KPI-Labs

AI/lab1/: additional.py  and.py  main.py  not.py  or.py  xor.py  xor2.py
AI/lab2/: main.py
AI/lab3/: hackernoon.py  main.py  sa.py
AI/pythonProject/: main.py
Algorithms/s3/: завдання на лаб1_ті71.docx  завдання на лаб2_тi71.docx  завдання на лаб3_ті71.docx  завдання на лаб4_ті71.docx  завдання на лаб5_ті71.docx  завдання на лаб6_ті71.docx  завдання на лаб7_ті71.docx
Functional/: package-lock.json
KPI/KPILab/: README.md  pom.xml
KPI/Samples/: ReflectionStudentRunner.java  computers.architect
NumericalMethods/s3/: lab1.py
OOP/s3/: CMakeLists.txt
OOP/s3/1/: 1.cpp  palevo1_1.cpp  palevo1_2.cpp  palevo1_3.cpp
OOP/s3/2/: File.cpp  File.h  main.cpp
OOP/s3/3/: File.cpp  File.h  main.cpp
OOP/s3/4/: File.cpp  File.h  main.cpp
OOP/s3/5/: Admission.cpp  Admission.h  Date.cpp  Date.h  Trip.cpp  Trip.h  Truck.cpp  Truck.h  WeekBalance.cpp  WeekBalance.h
OOP/s3/5_1/: Adam.cpp  Adam.h  Array.cpp  Array.h  Eva.cpp  Eva.h  God.cpp  God.h  Rib.cpp  Rib.h  diagram.puml  main.cpp
Parallel/lab1/: CMakeLists.txt  anya.cpp  denis.cpp  main.cpp  reference.cpp
Parallel/parallel_lab4/: package-lock.json  package.json  reader.js  writer.js
Python/s3/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  20.py  21.py  22.py  23  23.py  24  24.py  25.py  26.py  27.py  28.py  29.py  3.py  30.py  30_2.py  4.py  5.py  6.py  7.py  8.py  9.py  TI_81_Solomaha_10.ipynb  TI_81_Solomaha_11.ipynb  TI_81_Solomaha_12.ipynb  TI_81_Solomaha_13.ipynb  (+31 more)
(+185 files in other folders)
