cmake_minimum_required(VERSION 3.14)
project(kpi_oop_labs)

set(CMAKE_CXX_STANDARD 14)

add_executable(kpi_oop_labs main.cpp)
#add_executable(kpi_oop_labs_task1 1/1.cpp)
#add_executable(kpi_oop_labs_task2 2/main.cpp 2/File.cpp 2/File.h)
#add_executable(kpi_oop_labs_task3 3/main.cpp 3/File.cpp 3/File.h)
#add_executable(kpi_oop_labs_task4 4/main.cpp 4/File.cpp 4/File.h)
add_executable(kpi_oop_labs_task5 5/main.cpp 5/Date.cpp 5/Date.h 5/Truck.cpp 5/Truck.h 5/Admission.cpp 5/Admission.h 5/Trip.cpp 5/Trip.h 5/WeekBalance.cpp 5/WeekBalance.h)
add_executable(kpi_oop_labs_task5_1 5_1/God.cpp 5_1/God.h 5_1/Adam.cpp 5_1/Adam.h 5_1/Eva.cpp 5_1/Eva.h 5_1/Rib.cpp 5_1/Rib.h 5_1/main.cpp 5_1/Array.cpp 5_1/Array.h)